2004-06-16 19:06  Dossy Shiobara <dossy@panoptic.com>

	* https.tcl: throwback from old http.tcl - should use
	  _ns_https_read and not _ns_http_read

2004-06-16 18:56  Dossy Shiobara <dossy@panoptic.com>

	* https.tcl: new optional 'body' arg to ns_httpspost so the POST
	  data can be computed before calling ns_httpspost and sent as the
	  request body.

2004-06-12  Scott Goodwin  <scott@scottg.net>

      * https.tcl: fixed to use separate read and write handles again. We
      don't really need a separate read and write sockets (which are both
      wrapped in Tcl channels) since sockets can be bidirectional. I decided
      I'd clean up that code so you'd only need one socket, and thus would
      only be using up one file descriptor instead of two. But doing this made
      the code more complex and would change the number of args.  Ah well,
      live and learn. 

2004-04-14  Scott Goodwin  <scott@scottg.net>

      * nsopenssl.h, ssl.c, tclcmd.c: Restructured Tcl channel process; now
      uses ChanInfo structs to maintain state and to ensure proper closure and
      freeing of sockets, channels and structures.

2004-04-13  Scott Goodwin  <scott@scottg.net>

      * x509.c: Added x509.c to hold certificate management functions.

2004-04-09  Scott Goodwin  <scott@scottg.net>

      * All: Lot's of cleanup, deleting old comments, restructing some code.

      * nsopenssl.h, ssl.c: Merged NsOpenSSLConnSend, NsOpenSSLConnRecv and
      NsOpenSSLConnHandshake into one function, NsOpenSSLConnOp.

      * defaults.h, nsopenssl.h: Pulled default defines out of nsopenssl.h and
      into separate defaults.h file.

      * nsopenssl.h, ssl.c: Added DEBUG_NSOPENSSL define: uncomment it to dump
      more info to log; comment out for production runs.  Recompilation
      necessary.

      * sslcontext: fixed SSLContextCacheInit to take into account the
      context's server / client role.

2004-04-04  Scott Goodwin  <scott@scottg.net>

      * Tagged: 3_0beta19
